#2 アクセストークンの入力をダイアログに変更

--- a/index.html
+++ b/index.html
@@ -95,6 +95,42 @@
         </div>
       </div>
     </div>
+    <div class="modal" id="token-modal" tabindex="-1" style="display: none;">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+            <h4 class="modal-title">アクセストークンを入力してください。</h4>
+            <input type="text" class="form-control" id="token" placeholder="">
+            <span class="help-block">
+              ※アクセストークンを生成していない場合は <a href="https://developers.annict.jp/graphql-api/personal-access-token/#トークンを生成する" target="_blank">こちら</a> を参考にしてください。
+            </span>
+          </div>
+          <div class="modal-body">
+            <p>アクセストークンをブラウザのストレージに保存しますか？</p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="storage" value="" checked>ブラウザのストレージには保存しません。
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="storage" value="session">タブやウィンドウを閉じるまでの間、ブラウザのストレージに保存します。
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="storage" value="local">キャッシュデータをクリアするまでの間、ブラウザのストレージに保存します。
+              </label>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
+            <button type="button" class="btn btn-success" id="token-modal-ok">OK</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="js/annict.min.js"></script>
