--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav id="alert" class="navbar navbar-default navbar-fixed-top" style="display: none;">
-      <div id="alert-bg" class="collapse navbar-collapse">
+      <div id="alert-bg" class="navbar-collapse">
         <p class="navbar-text">
           <strong id="alert-message"></strong>
         </p>
@@ -316,6 +316,44 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
             <button type="button" class="btn btn-success" id="review-modal-ok">記録</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal" id="watched-modal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+            <h4 id="watched-work-title" class="modal-title"></h4>
+          </div>
+          <div class="modal-body">
+            <p>
+              ステータスを「見た」に変更しますか？
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
+            <button type="button" class="btn btn-success" id="watched-modal-ok">見た</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal" id="stop-modal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+            <h4 id="stop-work-title" class="modal-title"></h4>
+          </div>
+          <div class="modal-body">
+            <p>
+              ステータスを「視聴中止」に変更しますか？
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
+            <button type="button" class="btn btn-success" id="stop-modal-ok">視聴中止</button>
           </div>
         </div>
       </div>
