#8 記録時にTwitterやFacebookにシェアできるように

--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
             <div class="form-group has-success">
               <textarea id="record-comment" class="form-control" rows="5" placeholder="感想 (自由入力)"></textarea>
             </div>
+            <div class="form-group has-success">
+              <label class="checkbox-inline">
+                <input type="checkbox" id="record-twitter">Twitterにシェア
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="record-facebook">Facebookにシェア
+              </label>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
@@ -311,6 +319,14 @@
             </div>
             <div class="form-group has-success">
               <textarea id="review-body" class="form-control" rows="5" placeholder="感想 (自由入力)"></textarea>
+            </div>
+            <div class="form-group has-success">
+              <label class="checkbox-inline">
+                <input type="checkbox" id="review-twitter">Twitterにシェア
+              </label>
+              <label class="checkbox-inline">
+                <input type="checkbox" id="review-facebook">Facebookにシェア
+              </label>
             </div>
           </div>
           <div class="modal-footer">
