--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </form>
         <nav>
           <ul class="pager">
-            <li id="pager-prev"><a href="#">前へ</a></li>
-            <li id="pager-next"><a href="#">次へ</a></li>
+            <li id="pager-prev"><a>前へ</a></li>
+            <li id="pager-next"><a>次へ</a></li>
           </ul>
         </nav>
       </div>
