#12 エピソードを複数回記録できるように

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <button type="button" class="episode-prev btn btn-default">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
               </button>
-              <button type="button" class="episode-record btn btn-default">記録</button>
+              <a class="episode-record btn btn-default">記録</a>
               <button type="button" class="episode-next btn btn-default">
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
               </button>
