#5 メソッド名の変更ほか

--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="js/service.min.js"></script>
     <script src="js/annict.min.js"></script>
     <script src="js/watching.min.js"></script>
     <script src="js/search.min.js"></script>
