作品とエピソードのURL生成メソッド追加

--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
           </div>
           <div class="modal-body">
             <div class="form-group">
-              <div class="rating btn-group-xs" data-toggle="buttons" data-name="record-rating">
-              </div>
+              <div class="rating btn-group-xs" data-toggle="buttons" data-name="record-rating"></div>
             </div>
             <div class="form-group has-success">
               <textarea id="record-comment" class="form-control" rows="5" placeholder="感想 (自由入力)"></textarea>
