#20 五十音ボタンの初期表示指定変更

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li class="active"><a id="nav-watching" href="#watchingContent" data-toggle="tab">見てる</a></li>
             <li><a id="nav-search" href="#searchContent" data-toggle="tab">検索</a></li>
           </ul>
-          <span id="header-initial" style="display: none;"></span>
+          <span id="header-initial"></span>
       </div>
     </nav>
     <ul class="template nav nav-tabs">
@@ -65,7 +65,7 @@
     </div>
     <div class="template">
       <div id="initial-template">
-        <button type="button" class="btn btn-default" data-initial=""></button>
+        <button type="button" class="btn btn-default" data-initial="" style="display: none;"></button>
       </div>
       <div id="group-template">
         <div class="group-heading panel-heading" data-initial="">
